<resources>
    <string name="app_name">LocationDropper</string>
    <string name="press_me">press mee!</string>
    <string name="sample_text">Hello World!</string>
    <string name="enter_text">enter text</string>
    <string name="share_to_apps">Share!</string>
    <string name="show_hobbies_list">Show hobbies</string>
    <string name="title">Title</string>
    <string name="get_location">Update map</string>
    <string name="current_location">Your current location is:</string>
    <string name="start_location_recording">Start Recording location</string>
    <string name="access_token">pk.eyJ1IjoiYWxsbm90cGFpZCIsImEiOiJjanA5ejNtYmoyOG43M2tyd2RjazkxaWhyIn0.K2pr99aULLnoGn30jj16XQ</string>
    <string name="show_users">Show Users</string>
    <string name="show_day_plan">Show day plan</string>
    <string name="show_open_gl">Go to OpenGL</string>
    <string name="show_camera">Show Camera</string>
    <string name="camera">Camera</string>
    <string name="show_canvas">Show Canvas</string>
    <string name="save_bitmap">Save Bitmap</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="show_fragment">SHOW FRAGMENT</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_navigation">Nav</string>
    <string name="menu_map">Map</string>
    <string name="menu_library">Your Library</string>
    <string name="menu_home">Home</string>
</resources>