<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/etUserMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/enter_text"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnShowToast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/press_me" />

    <Button
        android:id="@+id/btnImplicitIntent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/share_to_apps" />

    <Button
        android:id="@+id/btnShowHobbiesList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/show_hobbies_list" />

    <Button
        android:id="@+id/btnGoToLocationActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_location" />

    <Button
        android:id="@+id/btnGotoUserActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_users" />

    <Button
        android:id="@+id/btnGoToOpenGL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_open_gl" />

    <Button
        android:id="@+id/btnGoToCamera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_camera" />

    <Button
        android:id="@+id/btnGoToDrawingCanvas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_canvas" />
</LinearLayout>
